# hatch-nativelib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: dist.yml
src/hatch_nativelib/: hooks.py  macos_relink.py  plugin.py  util.py
tests/: conftest.py  test_config.py  test_integration_build_backend.py  test_integration_dependency_chain.py  test_integration_wheel.py  test_util.py  test_validate.py
