[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hatch-nativelib"
dynamic = ["version"]
description = "Hatchling plugin with utilities for native libraries"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
    {name = "Dustin Spicuzza", email = "dustin@virtualroadside.com"},
]
keywords = [
    "hatch",
    "pkgconf",
]
classifiers = [
    "Framework :: Hatch",
]
dependencies = [
    "hatchling",
    "packaging",
    "pkgconf",
    "validobj~=1.2",
    "delocate; platform_system == 'Darwin'",
]

[project.urls]
"Source code" = "https://github.com/robotpy/hatch-nativelib"

[project.entry-points.hatch]
nativelib = "hatch_nativelib.hooks"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/hatch_nativelib/_version.py"

[[tool.mypy.overrides]]
module = ["pkgconf.*"]
follow_untyped_imports = true
